# comm_mvp

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: interface-change.md  work-item.md
.streamlit/: config.toml
data/processed/: flyer_examples.csv  gap_score_table.csv  monitoring_summary.csv  role_activity_log.csv  service_table.csv
data/raw/: synthetic_area_profiles.csv  synthetic_services.csv
docs/: architecture.md  custom-frontend-audit-roadmap.md  data-requirements.md  decisions.md  interfaces.md  project-definition.md  project-task-breakdown.md  submission-checklist.md  task-progress.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/public/data/: accessibility_table.csv  area_profile.csv
frontend/public/geo/: areas.geojson
frontend/src/: App.tsx  main.tsx
frontend/src/app/: globals.css
frontend/src/components/: InteractiveMap.tsx
frontend/src/lib/: data.ts
scripts/: build_processed_data.py  generate_synthetic_data.py
src/comm_need_radar/: __init__.py
src/comm_need_radar/config/: paths.py
src/comm_need_radar/dashboard/: app.py
src/comm_need_radar/ingestion/: synthetic_sources.py
src/comm_need_radar/monitoring/: quality.py
src/comm_need_radar/processing/: pipeline.py
src/comm_need_radar/rag/: summaries.py
src/comm_need_radar/scoring/: metrics.py
tests/: test_processed_contracts.py  test_scoring.py
